<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Ut01.Ex02.Presentation.Ut01Ex02Activity"
    android:background="@color/black">




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iconSpain"
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_spain"
        android:layout_margin="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textAlignment="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/red"
            android:padding="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/title"
            android:textColor="@color/white"
            android:maxLines="1"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:text="@string/contenido"
            android:maxLines="2"
            android:padding="10dp"
            android:textColor="@color/gray"/>

    </LinearLayout>
</LinearLayout>